BFD-3125: rif pipeline event notifications (#2140)